WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103273
[Cairo] Surface should not be destroyed before its usage
https://bugs.webkit.org/show_bug.cgi?id=103273
Summary
[Cairo] Surface should not be destroyed before its usage
Rafael Brandao
Reported
2012-11-26 10:29:03 PST
[Cairo] Surface should not be destroyed before its usage
Attachments
Patch
(2.01 KB, patch)
2012-11-26 10:31 PST
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Brandao
Comment 1
2012-11-26 10:31:18 PST
Created
attachment 176029
[details]
Patch
Brent Fulgham
Comment 2
2012-11-26 10:53:29 PST
Comment on
attachment 176029
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176029&action=review
Great catch. r=me.
> Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:-363 > - cairo_surface_destroy(surface);
Wow! I'm surprised this ever worked.
Rafael Brandao
Comment 3
2012-11-26 10:54:38 PST
Comment on
attachment 176029
[details]
Patch Me too. :-)
WebKit Review Bot
Comment 4
2012-11-26 11:12:48 PST
Comment on
attachment 176029
[details]
Patch Clearing flags on attachment: 176029 Committed
r135742
: <
http://trac.webkit.org/changeset/135742
>
WebKit Review Bot
Comment 5
2012-11-26 11:12:51 PST
All reviewed patches have been landed. Closing bug.
Kenneth Rohde Christiansen
Comment 6
2012-11-26 15:17:18 PST
Comment on
attachment 176029
[details]
Patch Nice
Kenneth Rohde Christiansen
Comment 7
2012-11-26 15:17:51 PST
Btw, did this solve any reproducible bugs?
Rafael Brandao
Comment 8
2012-11-26 15:21:24 PST
(In reply to
comment #7
)
> Btw, did this solve any reproducible bugs?
I wish, but I couldn't observe anything. I'm focusing on the scale < 1.0 bug right now and stumbled right into this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug