[Cairo] Surface should not be destroyed before its usage https://bugs.webkit.org/show_bug.cgi?id=103273

Reviewed by Brent Fulgham.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::drawRepaintCounter): There's some calls to get
the bits and stride from surface right after its destructions. It should
be postponed to avoid annoying bugs.


Canonical link: https://commits.webkit.org/121402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135742 268f45cc-cd09-0410-ab3c-d52691b4dbfc